Correct overlapping of chatbot icon and messaging send button

--- a/app/assets/stylesheets/shared/_chat_modal.scss
+++ b/app/assets/stylesheets/shared/_chat_modal.scss
@@ -1,8 +1,8 @@
 .chat-icon-wrapper {
-  position: fixed;
+  position: fixed !important;
   bottom: 30px;
   right: 30px;
-  z-index: 1000;
+  z-index: 9999 !important;
 }
 
 .chat-icon-button {
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;
+  margin-bottom: 70px;
 }
 
 .chat-icon-button:hover {
